--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <title>P2P Swap | Fast, Cheap transfers</title>
 </head>
 
-<body class="text-gray-800 antialiased">
+<body class="text-gray-800 antialiased min-h-full">
     <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3">
         <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
             <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
@@ -65,9 +65,9 @@
             </div>
         </div>
     </nav>
-    <main>
-        <section class="relative py-20 bg-gray-900">
-            <div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
+    <main class=" min-h-full">
+        <section class=" relative py-20 bg-gray-900">
+            <div class="bottom-auto top-0 left-0 right-0 w-full h-full absolute pointer-events-none overflow-hidden -mt-20"
                 style="height: 80px">
                 <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg"
                     preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
@@ -157,8 +157,11 @@
                 </div>
             </div>
         </section>
+        <section class="relative py-20 bg-gray-900">
+
+        </section>
     </main>
-    <footer class="relative bg-gray-300 pt-8 pb-6">
+    <footer class="relative  bg-gray-300 pt-8 pb-6">
         <div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
             style="height: 80px">
             <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
@@ -169,7 +172,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-6/12 px-4">
-                    <h4 class="text-3xl font-semibold">Let's keep in touch!</h4>
+                    <h4 class="text-3xl pt-2 font-semibold">Let's keep in touch!</h4>
                     <h5 class="text-lg mt-0 mb-2 text-gray-700">Find us on any of these platforms, we respond 1-2
                         business days.</h5>
                     <div class="mt-6">
